удалось создать меню как на виндовс 8

--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,79 @@
         </nav>
         
         <!-- <h1 class="main-title">All your videos in one place</h1> -->
-        <div class="main-menu">
+        <div class="main-menu main-psevdo">
+            <div class="main-item">
+                <img src="videos/placeholder (1).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (2).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (3).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (4).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (1).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (2).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (3).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (4).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (6).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (5).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (7).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (7).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (8).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (9).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (10).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (8).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (9).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (10).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (5).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (6).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (7).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (8).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (9).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (10).jpg"></img>
+            </div>
             <div class="main-item">
                 <img src="videos/placeholder (1).jpg"></img>
             </div>
@@ -40,6 +112,9 @@
             </div>
             <div class="main-item">
                 <img src="videos/placeholder (5).jpg"></img>
+            </div>
+            <div class="main-item">
+                <img src="videos/placeholder (6).jpg"></img>
             </div>
         </div>
     </main> <!--/container-->
